# guessfreak

./: .gitignore  .gitmodules  docker-compose.yml
.github/workflows/: rust.yml
local/supabase/: package.json  pnpm-lock.yaml  start.sh
services/guessfreak_api/: Cargo.toml
services/guessfreak_api/src/: main.rs
services/guessfreak_api/src/controller/: mod.rs  solution.rs
services/guessfreak_api/src/controller/error/: error_handler.rs
services/guessfreak_api/src/controller/files/: mod.rs
services/guessfreak_api/src/controller/solution/: mod.rs  solution.rs
services/guessfreak_api/src/controller/static_asset/: mod.rs
services/guessfreak_api/src/db/: supabase.rs
services/guessfreak_api/src/db/supabase/: graphql.rs  mod.rs  sql.rs  storage.rs
services/guessfreak_api/src/model/: mod.rs  path.rs  solution.rs  static_asset.rs
services/guessfreak_api/src/routes/: mod.rs  routes.rs
services/guessfreak_api/src/routes/files/: mod.rs
services/guessfreak_api/src/routes/solution/: mod.rs  solution.rs
services/guessfreak_api/src/routes/static_asset/: mod.rs
services/guessfreak_api/src/service/: mod.rs
services/guessfreak_api/src/service/solution/: mod.rs
services/guessfreak_api/src/service/static_asset/: mod.rs
services/guessfreak_api/src/util/: records.rs
