[package]
name = "guessfreak_api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15"
supabase-storage-rs = "0.1.5"
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.5"
bytes = "1.9.0"
tokio-stream = "0.1.17"
mime_guess = "2.0.5"
postgrest = "1.6.0"
